--- a/Website/themes/OneColumn/_Layout.cshtml
+++ b/Website/themes/OneColumn/_Layout.cshtml
@@ -72,10 +72,7 @@
                 <a href="@FormsAuthentication.LoginUrl?ReturnUrl=@Request.RawUrl">Sign in <i class="glyphicon glyphicon-log-in"></i></a>
             </span>
         }
-        <span>
-            Copyright &copy; @DateTime.Now.Year
-            <a href="http://madskristensen.net" itemprop="url name">Mads Kristensen</a>
-        </span>
+        <span>Copyright &copy; 1997- @DateTime.Now.Year Nathan Laan</span>
     </footer>
 
 
