Updated templates to hide comments.

--- a/Website/themes/OffCanvas/Post.cshtml
+++ b/Website/themes/OffCanvas/Post.cshtml
@@ -41,10 +41,10 @@ else
                 }
             </section>
 
-            if (Model.AreCommentsOpen(Context))
+            @*if (Model.AreCommentsOpen(Context))
             {
                 @RenderPage("~/views/CommentForm.cshtml")
-            }
+            }*@
         }
     </article>
 
