--- a/Website/themes/OffCanvas/_Layout.cshtml
+++ b/Website/themes/OffCanvas/_Layout.cshtml
@@ -96,10 +96,10 @@
     </footer>
 
 
-    @if ((Blog.CurrentPost != null && Blog.CurrentPost.AreCommentsOpen(Context)) || Blog.IsNewPost)
+    @*@if ((Blog.CurrentPost != null && Blog.CurrentPost.AreCommentsOpen(Context)) || Blog.IsNewPost)
     {
         <script src="@Blog.FingerPrint("/scripts/comments.js")" async defer></script>
-    }
+    }*@
 
     @if (User.Identity.IsAuthenticated)
     {
