--- a/Website/themes/TwoColumns/_Layout.cshtml
+++ b/Website/themes/TwoColumns/_Layout.cshtml
@@ -99,10 +99,10 @@
         <script src="@Blog.FingerPrint("/scripts/comments.js")" async defer></script>
     }
 
-    @if (User.Identity.IsAuthenticated)
+    @*@if (User.Identity.IsAuthenticated)
     {
         @RenderPage("~/views/AdminMenu.cshtml")
-    }
+    }*@
 
 </body>
 </html>
