--- a/Website/themes/TwoColumns/Post.cshtml
+++ b/Website/themes/TwoColumns/Post.cshtml
@@ -32,10 +32,10 @@
             }
         </section>
 
-        if (Model.AreCommentsOpen(Context))
+        @*if (Model.AreCommentsOpen(Context))
         {
             @RenderPage("~/views/CommentForm.cshtml")
-        }
+        }*@
     }
 </article>
 
